Fixed: z-index for text box to low

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     width: 260px;
     /*margin: auto; !important;*/
     /*min-width: 150px !important;*/
-    z-index: 1000;
+    z-index: 1300;
 	}
   /*Design for the collapseable navigation bar*/
 .navbar {
